<resources>
    <string name="app_name">Cat Facts</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="error_login">empty login</string>
    <string name="error_password">wrong password</string>
    <string name="cat_facts_filter">Filter</string>
    <string name="cat_facts_search">Search</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="favorite">Favorite</string>
    <string name="id">ID</string>
    <string name="used">Used</string>
    <string name="source">Source</string>
    <string name="type">Type</string>
    <string name="deleted">Deleted</string>
    <string name="v">V</string>
    <string name="text">Text</string>
    <string name="updatedat">updatedAt</string>
    <string name="createdat">createdAt</string>
</resources>
