<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:cardBackgroundColor="@android:color/white"
                                                   app:cardElevation="2dp"
                                                   app:cardPreventCornerOverlap="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <TextView
                    android:id="@+id/catfact_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                    android:id="@+id/catfact_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAppearance="?attr/textAppearanceBody2" />

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/cat_facts_favorite_border"
                    android:background="?attr/colorPrimaryDark"
                    android:contentDescription="@string/favorite"
                    android:id="@+id/btnFavorite"/>
        </LinearLayout>
</com.google.android.material.card.MaterialCardView>